--- a/news.css
+++ b/news.css
@@ -12,3 +12,22 @@
     margin-bottom:25px;
 }
 
+.card{
+    margin-bottom: 20px;
+}
+#thumbnail-style{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-foter{
+    margin-top: 120px;
+}
+.author-identity{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
