--- a/news.css
+++ b/news.css
@@ -5,6 +5,11 @@
         font-weight: 700;
         text-decoration: none;
 }
+.items{
+    background-color:cyan;
+    border-radius: 8px;
+    padding:15px 25px;
+}
 
 
 .categories{
